# TurboPlusPlus_ImplementacionRobotica

./: Canny.py  HandTrackingModule.py  README.md  Tenant.py  raa.py
pzb_ws/pzb_control/: CMakeLists.txt  package.xml
pzb_ws/pzb_control/config/: conf.yaml
pzb_ws/pzb_control/launch/: pzb_control_launch.py  pzb_launch.py
pzb_ws/pzb_control/rviz/: rviz.rviz
pzb_ws/pzb_control/scripts/: line_follower_path_publisher_node.py  path_publisher_node.py  prisma.py  pzb_teleop_low_level_node.py  pzb_teleop_node.py  speech_node.py  tmp.py
pzb_ws/pzb_control/src/: PID.cpp  PID.h  guidance_node.cpp  line_follower_path_publisher_node.cpp  master_node.cpp  state_estimate.cpp
pzb_ws/pzb_vision/: CMakeLists.txt  package.xml
pzb_ws/pzb_vision/config/: params.yaml
pzb_ws/pzb_vision/launch/: camera_launch.py  color_detection_launch.py  pzb_vision_launch.py
pzb_ws/pzb_vision/scripts/: dotted_detection_node.py  line_detection_node.py  line_detection_node2.py  line_detection_trackbar.py  predict.py  predict2.py  predict_streaming.py  segmentation_functions.py  signal_detection_node.py  tmp.py  tmp2.py  trackbar.py  train.py  validate.py  yolo_credential.py
pzb_ws/pzb_vision/scripts/credentials/: README.dataset.txt  README.roboflow.txt  data.yaml
pzb_ws/pzb_vision/scripts/credentials/test/labels/: WhatsApp-Image-2024-04-28-at-20-21-04_jpeg.rf.4eae40b5aa8f79b239ce654aa2b7c136.txt  WhatsApp-Image-2024-04-28-at-20-21-06_jpeg.rf.8ecf7112b5b7090d73a4270e53e6709f.txt
pzb_ws/pzb_vision/scripts/credentials/train/: labels.cache
pzb_ws/pzb_vision/scripts/credentials/train/labels/: WhatsApp-Image-2024-04-28-at-20-21-00_jpeg.rf.1421053467efd3c11095df2547eac061.txt  WhatsApp-Image-2024-04-28-at-20-21-00_jpeg.rf.d662cddebf4b9fea035e776544d37d2a.txt  WhatsApp-Image-2024-04-28-at-20-21-00_jpeg.rf.fb66690583451f0e9d4c1176482f9403.txt  WhatsApp-Image-2024-04-28-at-20-21-03-1-_jpeg.rf.0c8721a564b0411a6308df409336c9ae.txt  WhatsApp-Image-2024-04-28-at-20-21-03-1-_jpeg.rf.b2d81d93d5f3db9bf11875783b4c2051.txt  WhatsApp-Image-2024-04-28-at-20-21-03-1-_jpeg.rf.bc90752580bf6af69929021fea1c1956.txt  WhatsApp-Image-2024-04-28-at-20-21-03-2-_jpeg.rf.695d2e0f6018142624c951a50a4456e3.txt  WhatsApp-Image-2024-04-28-at-20-21-03-2-_jpeg.rf.cb43dc4a963f83967e58a14c84747173.txt  WhatsApp-Image-2024-04-28-at-20-21-03-2-_jpeg.rf.e569b98fa4f22c38c99ce5f0d0a4faf9.txt  WhatsApp-Image-2024-04-28-at-20-21-03-3-_jpeg.rf.56ce6f86b06db7e4d3a3142696947709.txt  WhatsApp-Image-2024-04-28-at-20-21-03-3-_jpeg.rf.9217f1a28cbee99f00183adefc045b48.txt  WhatsApp-Image-2024-04-28-at-20-21-03-3-_jpeg.rf.b3534c3ca70137c1ff4cf3ecbfac8b79.txt  WhatsApp-Image-2024-04-28-at-20-21-03_jpeg.rf.6cd2be8605b2fa80fd8caa64af6fd626.txt  WhatsApp-Image-2024-04-28-at-20-21-03_jpeg.rf.7c8354deafd76486f631dabf2729e079.txt  WhatsApp-Image-2024-04-28-at-20-21-03_jpeg.rf.fa13e2f482abfc80746fda002cf24271.txt  WhatsApp-Image-2024-04-28-at-20-21-05-1-_jpeg.rf.65a9f558194d92c0d68ebaf182167968.txt  WhatsApp-Image-2024-04-28-at-20-21-05-1-_jpeg.rf.90f1ef3e006ba33056e20b1ca0bc8b08.txt  WhatsApp-Image-2024-04-28-at-20-21-05-1-_jpeg.rf.b16d0fd2a8e29dcd4347c0a7a0e3169d.txt  WhatsApp-Image-2024-04-28-at-20-21-05-2-_jpeg.rf.5b49c16734c1ea2596d5b021c278ad25.txt  WhatsApp-Image-2024-04-28-at-20-21-05-2-_jpeg.rf.7c21f07c17b5b1ec31526f0a46eb3ad0.txt  WhatsApp-Image-2024-04-28-at-20-21-05-2-_jpeg.rf.c3cccc6fa1715d304536747a84f424b9.txt  WhatsApp-Image-2024-04-28-at-20-21-05_jpeg.rf.149c78f488bd812ddf50ca73ee6a1683.txt  WhatsApp-Image-2024-04-28-at-20-21-05_jpeg.rf.a2b16c613ddd70eec60c6b1f3bf06789.txt  WhatsApp-Image-2024-04-28-at-20-21-05_jpeg.rf.d99aedb763df2db7c7000324afe7071c.txt  WhatsApp-Image-2024-04-28-at-20-21-06-1-_jpeg.rf.987944eb61be4bb554d1802df8bfbdd7.txt  WhatsApp-Image-2024-04-28-at-20-21-06-1-_jpeg.rf.a216c4dc2f42a7ecefe41b459865d3d6.txt  WhatsApp-Image-2024-04-28-at-20-21-06-1-_jpeg.rf.a23e5210b9f8def3940b3ee32f5b2483.txt  WhatsApp-Image-2024-04-28-at-20-21-07-1-_jpeg.rf.3fe8175618678fc5dcdbcf6cf6143762.txt  WhatsApp-Image-2024-04-28-at-20-21-07-1-_jpeg.rf.b919e5d0f86de1c53d2bf9b2ef0d5e8a.txt  WhatsApp-Image-2024-04-28-at-20-21-07-1-_jpeg.rf.d1534af1bcb4dff75b7ec2d6869a0d45.txt  WhatsApp-Image-2024-04-28-at-20-21-08-1-_jpeg.rf.59b83956649ebda45958013d5aec40da.txt  WhatsApp-Image-2024-04-28-at-20-21-08-1-_jpeg.rf.9a261f08fc19b129c3fb9d35a4dda2fb.txt  WhatsApp-Image-2024-04-28-at-20-21-08-1-_jpeg.rf.9cf77cc9ad0222ea2fcb588f94da159d.txt  WhatsApp-Image-2024-04-28-at-20-21-08_jpeg.rf.4c6b467800007b057b830fe2e2a92814.txt  WhatsApp-Image-2024-04-28-at-20-21-08_jpeg.rf.bd4090fc53093236268d1628f368b188.txt  WhatsApp-Image-2024-04-28-at-20-21-08_jpeg.rf.d82bb0f6243bad53cae407cb67e27dec.txt  (+159 more)
pzb_ws/pzb_vision/scripts/credentials/valid/: labels.cache
pzb_ws/pzb_vision/scripts/ducks_dataset/: README.dataset.txt  README.roboflow.txt  data.yaml
pzb_ws/pzb_vision/scripts/ducks_dataset/train/: labels.cache
pzb_ws/pzb_vision/scripts/ducks_dataset/valid/: labels.cache
pzb_ws/pzb_vision/scripts/floor_tiles/: README.dataset.txt  README.roboflow.txt  data.yaml
pzb_ws/pzb_vision/scripts/floor_tiles/train/: labels.cache
pzb_ws/pzb_vision/scripts/floor_tiles/valid/: labels.cache
pzb_ws/pzb_vision/src/: camera_view.cpp  camera_view.h  color_detection.cpp  color_detection.h  decode_img.cpp  dotted_detection.cpp  line_detection.cpp
pzb_ws/pzb_vision_jet/: CMakeLists.txt  package.xml
pzb_ws/pzb_vision_jet/src/: camera_view.cpp
real_time_pose_estimation/: CMakeLists.txt
real_time_pose_estimation/Data/: box_credentials_cookies_ORB.yml  credentials_box.ply
real_time_pose_estimation/src/: main_detection.cpp  main_registration.cpp
reto3_ws/object_display/: CMakeLists.txt
reto3_ws/object_display/config/: params.yaml
reto3_ws/object_display/launch/: object_tracking_launch.py
reto3_ws/object_display/rviz/: rviz.rviz
reto3_ws/object_display/src/: object_tracking.cpp
test_cmake/: CMakeLists.txt  test.cpp
test_cmake/build_unix/: CMakeCache.txt  Makefile  cmake_install.cmake  test
(+6525 files in other folders)
