<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pzb_vision</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="demianmarin03@gmail.com">demian</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>ros2launch</exec_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <exec_depend>pzb_msgs</exec_depend>
  <depend>rclpy</depend>
  <depend>cv2</depend>
  <depend>sensor_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
